SERVER-17018: Only invalidate cursors pointing to the same index